Changes in version 0.2
======================

STILL UNDER DEVELOPMENT; NOT RELEASED YET!
REMEMBER TO ADJUST -version-info BEFORE THE RELEASE.

* New methods added to the state class: get_metafield, get_metatable,
  insert, push_value, raw_get and raw_set.


Changes in version 0.1
======================

Released on 2012/01/29.

* This is the first public release of the Lutok package.