@@ -4,6 +4,8 @@ Changes in version 0.2
 STILL UNDER DEVELOPMENT; NOT RELEASED YET!
 REMEMBER TO ADJUST -version-info BEFORE THE RELEASE.
 
+* New global constants: globals_index.
+
 * New methods added to the state class: get_metafield, get_metatable,
   insert, push_value, raw_get and raw_set.
 
